# aicode

./: .gitignore  .gitmodules  .pre-commit-config.yaml  .prettier-wrapper.sh  package-lock.json  setup-pre-commit.sh
.chats/: w5-skill.md  w5.md
.claude/agents/: python-system-architect.md
.claude/skills/pg-data/: SKILL.md  blog_db.md  ecommerce_db.md  erp_db.md
.github/workflows/: ci.yml  docker-build.yml  pre-commit.yml
specs/001-nl-sql-explorer/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-nl-sql-explorer/checklists/: requirements.md
specs/001-nl-sql-explorer/contracts/: openapi.yaml
specs/002-mysql-support/: tasks.md
specs/common/: git-commit-guide.md
specs/site/: instructions.md  style.md
specs/w1/: 0001-spec-by-claude.md  0001-spec.md  0002-implementation-plan-by-claude.md  0002-implementation-plan.md  instructions.md
specs/w2/: 0001-improvement.md  0002-improvement-implementation-plan.md  instructions.md
specs/w3/: 0001-spec.md  0002-design.md  0003-implementation-plan.md  0004-design.md  instructions-speech.md  instructions.md
specs/w4/: apply-patch-integration.md  codex-apply-patch.md  codex-architecture-by-claude.md  codex-architecture-by-cursor.md  codex-commit-history.md  codex-event-loop.md  codex-tool-call.md  instructions.md
specs/w5/: 0001-pg-mcp-prd.md  0002-pg-mcp-design.md  0003-pg-mcp-impl-plan.md  0004-pg-mcp-test-plan.md
specs/w7/: 0001-prd.md  0002-design-spec.md  instructions.md
w1/project-alpha/: .dockerignore  .gitignore  .pre-commit-setup.md  .prettierignore  DEPLOYMENT.md  DOCKER_SETUP.md  Makefile  PHASE1_COMPLETE.md  PHASE2_COMPLETE.md  PHASE3_COMPLETE.md  PHASE4_COMPLETE.md  PHASE5_COMPLETE.md  PHASE6_COMPLETE.md  PRE_COMMIT_GITHUB_ACTIONS.md  QUICK_FIX.md  README.md  TROUBLESHOOTING.md  UV_MIRROR_SETUP.md  docker-compose.dev.yml  docker-compose.yml  setup-pre-commit.sh  start-backend.sh  start-frontend.sh
w1/project-alpha/backend/: .dockerignore  .gitignore  Dockerfile  alembic.ini  pyproject.toml
w1/project-alpha/backend/alembic/: env.py
w1/project-alpha/backend/alembic/versions/: 55edc2c3852c_initial_migration_create_tickets_tags_.py
w1/project-alpha/backend/app/: config.py  database.py  exceptions.py  main.py
w1/project-alpha/backend/app/models/: __init__.py  base.py  tag.py  ticket.py  ticket_tag.py
w1/project-alpha/backend/app/routers/: __init__.py  tags.py  tickets.py
w1/project-alpha/backend/app/schemas/: __init__.py  common.py  tag.py  ticket.py
w1/project-alpha/backend/app/services/: __init__.py  tag_service.py  ticket_service.py
w1/project-alpha/backend/docs/: INTEGRATION_TEST.md  SEED_README.md  seed.sql  test.rest
w1/project-alpha/frontend/: .dockerignore  .eslintrc.cjs  .prettierignore  Dockerfile  Dockerfile.dev  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js
w2/db_query/: .dockerignore  Makefile  README.md  docker-compose.dev.yml  docker-compose.yml
w2/db_query/backend/: .dockerignore  Dockerfile  README.md  pyproject.toml
w2/db_query/backend/app/: __init__.py  config.py  database.py  main.py
w2/db_query/backend/app/adapters/: __init__.py  base.py
w2/db_query/backend/app/adapters/mysql/: __init__.py  adapter.py  connection.py  metadata.py  query.py  types.py
w2/db_query/backend/app/adapters/postgresql/: __init__.py  adapter.py  connection.py  metadata.py  query.py  types.py
w2/db_query/backend/app/adapters/shared/: __init__.py  query_base.py  type_mapper_base.py
w2/db_query/backend/app/core/: __init__.py  exceptions.py  registry.py  types.py
w2/db_query/backend/app/models/: __init__.py  database.py  error.py  history.py  query.py
w2/db_query/backend/app/routers/: __init__.py  databases.py
w2/db_query/backend/app/services/: connection.py  connection_base.py  connection_factory.py  connection_mysql.py  database.py  history.py  llm.py  metadata.py  metadata_factory.py  metadata_mysql.py  query.py  query_factory.py  query_mysql.py
w2/db_query/backend/tests/: conftest.py
w2/db_query/fixtures/: interview_db.md  natural_language_test.md  test-mysql.rest  test.rest
w2/db_query/frontend/: .dockerignore  .eslintrc.cjs  .prettierignore  Dockerfile  Dockerfile.dev  README.md  index.html  nginx.conf  package-lock.json  package.json  playwright.config.ts  (+2 more)
w3/raflow/: CLAUDE.md  README.md  index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.json
w3/raflow/src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
w3/raflow/src-tauri/capabilities/: main.json
w3/raflow/src-tauri/icons/: icon.icns
w3/raflow/src-tauri/src/: commands.rs  error.rs  hotkey.rs  lib.rs  main.rs  settings_store.rs  state.rs  tray.rs
w3/raflow/src-tauri/src/audio/: capture.rs  denoise.rs  mod.rs
w3/raflow/src-tauri/src/input/: clipboard.rs  inserter.rs  mod.rs
w3/raflow/src-tauri/src/transcriber/: client.rs  message.rs  mod.rs
w5/pg-mcp/: AGENTS.md  README.md  config.example.yaml  config.yaml  pyproject.toml
w5/pg-mcp/fixtures/: Makefile  README.md  docker-compose.yml  test.md
w5/pg-mcp/fixtures/large/: 01_schema.sql  02_data.sql
w5/pg-mcp/fixtures/medium/: 01_schema.sql  02_data.sql
w5/pg-mcp/fixtures/small/: 01_schema.sql  02_data.sql
w5/pg-mcp/src/pg_mcp/: __init__.py  __main__.py  server.py
w5/pg-mcp/src/pg_mcp/config/: __init__.py  settings.py
w5/pg-mcp/src/pg_mcp/database/: __init__.py  connection.py  schema_cache.py  service.py
w5/pg-mcp/src/pg_mcp/llm/: __init__.py  prompts.py  service.py
w5/pg-mcp/src/pg_mcp/models/: __init__.py  errors.py  query.py  schema.py
w5/pg-mcp/src/pg_mcp/query/: __init__.py  service.py
w5/pg-mcp/src/pg_mcp/validator/: __init__.py  sql_validator.py
w5/pg-mcp/tests/: conftest.py  test_config.py  test_database.py  test_llm.py  test_models.py  test_query_service.py  test_server.py  test_validator.py
w5/pg-mcp/tests/e2e/: __init__.py  test_server.py
w5/pg-mcp/tests/fixtures/: __init__.py  sample_data.py
w5/pg-mcp/tests/integration/: __init__.py
w5/pg-mcp/tests/unit/: __init__.py  test_models.py  test_validator.py
w7/genslides/: .gitignore
(+114 files in other folders)
