[package]
name = "raflow"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"

[lib]
name = "raflow_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.0", features = ["tray-icon", "image-png"] }
tauri-plugin-global-shortcut = "2.0"
tokio = { version = "1.49", features = ["full"] }
tokio-tungstenite = { version = "0.28", features = ["native-tls"] }
cpal = "0.15"
enigo = "0.2"
arboard = "3.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
base64 = "0.22"
futures-util = "0.3"
http = "1.0"
thiserror = "2.0"
log = "0.4"
env_logger = "0.11"
arc-swap = "1.7"
dashmap = "6.0"
dirs = "6.0"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
